# MY_MLP

./: CMakeLists.txt  Goal.txt  Makefile  README.md  ReconnaissancePokemon.txt  math_test.ipynb  neuratNetwork  preprocessing.py
includes/: Function.hpp  ImageLoader.hpp  Matrix.hpp  Network.hpp  Neuron.hpp
includes/neural/: network.h  neuron.h
includes/others/: display.h  function.h  preprocessing.h  utils.h
src/: Network.cpp  Neuron.cpp  display.cpp  function.cpp  main.cpp  network.cpp  neuron.cpp  preprocessing.py  test.cpp  test.py  utils.cpp
src/Preprocessing/: preprocessing.cpp  preprocessing.h
src/linear_algebra/: Matrix.cpp
src/loader/: ImageLoader.cpp
src/math/: Function.cpp  Matrix.cpp
src/notebooks/: MLP.ipynb
